cmake_minimum_required(VERSION 3.12)
set(PROJ_NAME "HdriToCubemap")
project(${PROJ_NAME} VERSION 0.1)

add_executable(HdriToCubemap demo.cpp HdriToCubemap.hpp)
set_property(TARGET HdriToCubemap PROPERTY CXX_STANDARD 17)

option(HDRITOCUBEMAP_USE_OPENCL "Use OpenCL for calculating the cubemap faces" OFF)
if(HDRITOCUBEMAP_USE_OPENCL)
    find_package(OpenCL)
    if(OpenCL_FOUND)
        target_link_libraries (HdriToCubemap PUBLIC ${OpenCL_LIBRARY})
        target_include_directories(HdriToCubemap PUBLIC ${OpenCL_INCLUDE_DIRS})
        target_compile_definitions(HdriToCubemap PRIVATE _USE_OPENCL)
        target_compile_definitions(HdriToCubemap PRIVATE HDRITOCUBEMAP_CL_DIR="${CMAKE_SOURCE_DIR}")
    endif()
endif()
